Fix visible select fon image

--- a/src/app/main/select/select.component.scss
+++ b/src/app/main/select/select.component.scss
@@ -76,7 +76,7 @@
   background-size: 200px;
   background-position: 62% 160px;
   width: calc(100% + 20px);
-  height: 500px;
+  height: 400px;
   z-index: 9999;
   pointer-events: none;
   animation: opacity 0.7s ease-in alternate;
